# dali_transceiver

./: CMakeLists.txt  README.md  errors  espidf_source.bat  lutmaker.py  part.csv  post_spiffs.sh  post_spiffs_nopng.sh  pytest_ir_nec.py  sdkconfig  sdkconfig.old  write_spiffs.sh
luts/: livingroom_main.csv
main/: 0-10v.c  0-10v.h  CMakeLists.txt  adc.c  adc.h  base.c  base.h  buttons.c  buttons.h  dali.c  dali.h  dali_edgeframe_parser.c  dali_edgeframe_parser.h  dali_encoder.c  dali_encoder.h  dali_receiver.c  dali_rmt_receiver.c  dali_transceiver.c  dali_transceiver.h  dali_transceiver_main.c  dali_transmit.c  dali_transmit.h  dali_utils.c  dali_utils.h  edgeframe_logger.c  edgeframe_logger.h  espnow.c  espnow.h  gpio_utils.c  gpio_utils.h  html.c  html.html  http_server.c  http_server.h  ledflash.c  ledflash.h  realtime.c  realtime.h  rgb_led.c  rgb_led.h  (+7 more)
spiffs/: .~lock.levelluts.csv#  .~lock.levelluts.ods#  alarms.html  channels.html  default_settings.csv  html.html  index.html  levelluts.csv  levelluts.ods  levelluts2.csv  levellutsalpha.csv  styles.css  title.txt
